# grpc-inference-server

./: .gitignore  Cargo.toml  LICENSE  README.md
examples/: train_model.rs
examples/data/: request.example.json
grpc-server/: Cargo.toml  build.rs
grpc-server/examples/: image.rs
grpc-server/src/: cli.rs  config.rs  error.rs  interceptors.rs  lib.rs  main.rs  server.rs  service.rs
grpc-server/src/inference_engine/: mod.rs  weights_provider.rs
mnist/: Cargo.toml
mnist/examples/: conv.rs  train_model.rs  var_builder.rs
mnist/src/: inference.rs  lib.rs  types.rs  weights_provider.rs
models/: mnist_mlp.safetensors
proto/: mnist.proto
rest-server/: Cargo.toml
rest-server/src/: app.rs  main.rs  middleware.rs
server/: Cargo.toml
server/src/: app.rs  error.rs  lib.rs  main.rs
src/: inference.rs  lib.rs  model.rs
training/: pyproject.toml  train.py
