[package]
name = "grpc-server"
version = "0.1.0"
edition = "2024"

[dependencies]
tonic = "*"
prost = "0.13.1"
tokio = { version = "1.45.1", features = ["macros", "rt-multi-thread"] }
mnist = { path = "../mnist" }
candle-core = "0.9.1"
image = "0.25.6"

[build-dependencies]
tonic-build = "*"

[dev-dependencies]
serde = "1.0.219"
serde_json = "1.0.140"
