[package]
name = "grpc-server"
version = "0.1.0"
edition = "2024"

[dependencies]
tonic = "*"
prost = "0.13.1"
tokio = { version = "1.45.1", features = ["macros", "rt-multi-thread"] }
mnist = { path = "../mnist" }
candle-core = "0.9.1"
image = "0.25.6"
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
candle-nn = "0.9.1"
derive_more = { version = "2.0.1", features = ["display", "from"] }
clap = { version = "4.5.40", features = ["derive"] }
uuid = { version = "1.17.0", features = ["v4"] }
tower-http = { version = "0.6.6", features = ["trace"] }
tower = "0.5.2"
http = "1.3.1"

[build-dependencies]
tonic-build = "*"

[dev-dependencies]
serde = "1.0.219"
serde_json = "1.0.140"
