[package]
name = "rest-server"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.4"
tokio = { version = "1.45.1", features = ["full"] }
mnist = { path = "../mnist" }
candle-core = "0.9.1"
derive_more = { version = "2.0.1", features = ["full"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
uuid = { version = "1.17.0", features = ["v4"] }
axum-extra = "0.10.1"
